# WZanalysis_release21

./: .asetup.save  .gitignore  README.md  package_filters.txt
XAMPPbase/: CMakeLists.txt  XAMPPbase.doxyfile
XAMPPbase/Root/: AnalysisConfig.cxx  AnalysisUtils.cxx  BaseAnalysisModule.cxx  Cuts.cxx  ElectronDecorations.cxx  EventInfo.cxx  EventStorage.cxx  HistoBase.cxx  HistoHelpers.cxx  JetDecorations.cxx  MetaDataTree.cxx  MuonDecorations.cxx  ParticleDecorations.cxx  ParticleSelector.cxx  PhotonDecorations.cxx  PileupUtils.cxx  RecontructedParticles.cxx  SUSYAnalysisHelper.cxx  SUSYElectronSelector.cxx  SUSYJetSelector.cxx  SUSYMetSelector.cxx  SUSYMuonSelector.cxx  SUSYParticleSelector.cxx  SUSYPhotonSelector.cxx  SUSYSystematics.cxx  SUSYTauSelector.cxx  SUSYTriggerTool.cxx  SUSYTruthAnalysisHelper.cxx  SUSYTruthSelector.cxx  TauDecorations.cxx  TreeBase.cxx  TreeHelpers.cxx  TruthDecorations.cxx
XAMPPbase/XAMPPbase/: AnalysisConfig.h  AnalysisUtils.h  BaseAnalysisModule.h  Cuts.h  Cuts.ixx  DecorationInterface.h  Defs.h  ElectronDecorations.h  EventInfo.h  EventInfo.ixx  EventStorage.h  EventStorage.ixx  HistoBase.h  HistoHelpers.h  HistoHelpers.ixx  IAnalysisHelper.h  IAnalysisModule.h  IDiTauSelector.h  IElectronSelector.h  IEventInfo.h  IJetSelector.h  IMetSelector.h  IMuonSelector.h  IPhotonSelector.h  ISystematics.h  ITauSelector.h  ITriggerTool.h  ITruthSelector.h  JetDecorations.h  MetaDataTree.h  MuonDecorations.h  ParticleDecorations.h  ParticleSelector.h  ParticleSelector.ixx  PhotonDecorations.h  PileupUtils.h  ReconstructedParticles.h  SUSYAnalysisHelper.h  SUSYElectronSelector.h  SUSYJetSelector.h  (+20 more)
XAMPPbase/data/: UsersWhoSubmittedPRW.txt
XAMPPbase/data/GroupDiskLists/MPPMU_LOCALGROUPDISK/: mc15_13TeV.361601.PowhegPy8EG_CT10nloME_AZNLOCTEQ6L1_WZlvll_mll4.deriv.DAOD_TRUTH1.e4054_p3555.txt  mc15_13TeV.361601.PowhegPy8EG_CT10nloME_AZNLOCTEQ6L1_WZlvll_mll4.deriv.DAOD_TRUTH1.e4475_p3555.txt  mc15_13TeV.361601.PowhegPy8EG_CT10nloME_AZNLOCTEQ6L1_WZlvll_mll4.merge.DAOD_TRUTH3.e4475_p2949.txt  mc15_13TeV.361602.PowhegPy8EG_CT10nloME_AZNLOCTEQ6L1_WZlvvv_mll4.deriv.DAOD_TRUTH1.e4054_p3555.txt  mc15_13TeV.361603.PowhegPy8EG_CT10nloME_AZNLOCTEQ6L1_ZZllll_mll4.deriv.DAOD_TRUTH1.e4475_p3555.txt  mc15_13TeV.361603.PowhegPy8EG_CT10nloME_AZNLOCTEQ6L1_ZZllll_mll4.merge.DAOD_TRUTH3.e4475_p2949.txt  mc15_13TeV.361604.PowhegPy8EG_CT10nloME_AZNLOCTEQ6L1_ZZvvll_mll4.deriv.DAOD_TRUTH1.e4475_p3555.txt  mc15_13TeV.361605.PowhegPy8EG_CT10nloME_AZNLOCTEQ6L1_ZZvvvv_mll4.deriv.DAOD_TRUTH1.e4054_p3555.txt  mc15_13TeV.364250.Sherpa_222_NNPDF30NNLO_llll.deriv.DAOD_TRUTH1.e5894_e5984_p3401.txt  mc15_13TeV.364253.Sherpa_222_NNPDF30NNLO_lllv.deriv.DAOD_TRUTH1.e5916_e5984_p3401.txt  mc15_13TeV.364254.Sherpa_222_NNPDF30NNLO_llvv.deriv.DAOD_TRUTH1.e5916_e5984_p3401.txt  mc15_13TeV.364255.Sherpa_222_NNPDF30NNLO_lvvv.deriv.DAOD_TRUTH1.e5916_e5984_p3401.txt  mc16_13TeV.364250.Sherpa_222_NNPDF30NNLO_llll.deriv.DAOD_TRUTH1.e5894_e5984_p3401.txt  mc16_13TeV.364253.Sherpa_222_NNPDF30NNLO_lllv.deriv.DAOD_TRUTH1.e5916_e5984_p3401.txt  mc16_13TeV.364254.Sherpa_222_NNPDF30NNLO_llvv.deriv.DAOD_TRUTH1.e5916_e5984_p3401.txt  mc16_13TeV.364255.Sherpa_222_NNPDF30NNLO_lvvv.deriv.DAOD_TRUTH1.e5916_e5984_p3401.txt  mc16_13TeV.404290.MGPy8EG_A14N23LO_GG_1400_10_LLEi33.deriv.DAOD_SUSY2.e5651_e5984_s3126_r9781_r9778_p3260.txt  mc16_13TeV.404290.MGPy8EG_A14N23LO_GG_1400_10_LLEi33.deriv.DAOD_SUSY2.e5651_e5984_s3126_r9838_r9315_p3260.txt  mc16_13TeV.404290.MGPy8EG_A14N23LO_GG_1400_10_LLEi33.deriv.DAOD_SUSY2.e5651_s3126_r9364_r9315_p3260.txt  mc16_13TeV.404291.MGPy8EG_A14N23LO_GG_1400_50_LLEi33.deriv.DAOD_SUSY2.e5651_e5984_s3126_r9781_r9778_p3260.txt  mc16_13TeV.404291.MGPy8EG_A14N23LO_GG_1400_50_LLEi33.deriv.DAOD_SUSY2.e5651_e5984_s3126_r9838_r9315_p3260.txt  mc16_13TeV.404291.MGPy8EG_A14N23LO_GG_1400_50_LLEi33.deriv.DAOD_SUSY2.e5651_s3126_r9364_r9315_p3260.txt  mc16_13TeV.404292.MGPy8EG_A14N23LO_GG_1400_100_LLEi33.deriv.DAOD_SUSY2.e5651_e5984_s3126_r9781_r9778_p3260.txt  mc16_13TeV.404292.MGPy8EG_A14N23LO_GG_1400_100_LLEi33.deriv.DAOD_SUSY2.e5651_e5984_s3126_r9838_r9315_p3260.txt  mc16_13TeV.404292.MGPy8EG_A14N23LO_GG_1400_100_LLEi33.deriv.DAOD_SUSY2.e5651_s3126_r9364_r9315_p3260.txt  mc16_13TeV.404293.MGPy8EG_A14N23LO_GG_1400_500_LLEi33.deriv.DAOD_SUSY2.e5651_e5984_s3126_r9781_r9778_p3260.txt  mc16_13TeV.404293.MGPy8EG_A14N23LO_GG_1400_500_LLEi33.deriv.DAOD_SUSY2.e5651_s3126_r9364_r9315_p3260.txt  mc16_13TeV.404294.MGPy8EG_A14N23LO_GG_1400_900_LLEi33.deriv.DAOD_SUSY2.e5651_e5984_s3126_r9781_r9778_p3260.txt  mc16_13TeV.404294.MGPy8EG_A14N23LO_GG_1400_900_LLEi33.deriv.DAOD_SUSY2.e5651_s3126_r9364_r9315_p3260.txt  mc16_13TeV.404295.MGPy8EG_A14N23LO_GG_1400_1390_LLEi33.deriv.DAOD_SUSY2.e5651_e5984_s3126_r9781_r9778_p3260.txt  mc16_13TeV.404295.MGPy8EG_A14N23LO_GG_1400_1390_LLEi33.deriv.DAOD_SUSY2.e5651_s3126_r9364_r9315_p3260.txt  (+60 more)
XAMPPbase/python/: AthArgParserSetup.py  CheckCrossSections.py  CompareNTUP_PILEUP.py  CreateAODFromDAODList.py  CreateMergedNTUP_PILEUP.py  SubmitToBatch.py  SubmitToGrid.py  UpdateCI_CutFlow.py  UpdateSampleLists.py  Utils.py  printCutFlow.py  runAthena.py
XAMPPbase/scripts/: Batch_Analysis.sh
XAMPPbase/share/: BaseToolSetup.py  runTruthBase.py  runXAMPPbase.py
XAMPPbase/src/: XAMPPalgorithm.cxx  XAMPPalgorithm.h
XAMPPbase/src/components/: XAMPPbase_entries.cxx
XAMPPbase/test/: reference_cutflow.txt  reference_cutflow_data.txt  reference_cutflow_truth.txt  test_data18.sh  test_mc_ttbar.sh  test_mc_ttbar_syst.sh  test_mc_ttbar_truth.sh
XAMPPbase/util/: CreateBatchJobSplit.cxx  SlimPRWFile.cxx
(+36 files in other folders)
